tests/baselines/reference/directReferenceToNull.errors.txt
==== tests/cases/compiler/directReferenceToNull.ts (1 errors) ====
    var x: Null;
           ~~~~
!!! error TS2095: Could not find symbol 'Null'.